--- a/backend/package.json
+++ b/backend/package.json
@@ -10,10 +10,12 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "fs-extra": "^11.3.0",
+    "multer": "^1.4.5-lts.1",
     "replicate": "^1.0.1",
     "sharp": "^0.33.5"
   },
